v0.0.563 Fixed fluid pipe transactions and an error with the ammonia synthesizer when connecting a fluid pipe.